--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background: #aeb6ef;
 }
 
-.App-link {
-  color: #61dafb;
+.main-container {
+  height: 400px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 600px;
+  background: #fff;
+  padding: 2% 0;
+  position: absolute;
+  left: 10%;
+  top: 15%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.state-input-class {
+  padding: 2% 0;
+  margin-bottom: 2%;
+}
+
+.state-input-class input {
+  padding: 1%;
+  width: 30%;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  text-align: center;
+}
+
+.result-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
